# Technical-Assessment

./: CMakeLists.txt  README.md  build_project.sh
Other Example code/Algorithm development/: patch_position_calculation.c
algorithm_development/ECG_and_Grip_Force_prototype/: ADS1241.py
algorithm_development/phased_array_patch_orient_calc/: patch_translation_rotation_prototype.py
documentation/: embedded_software_technical_assessment.docx
driver_development/: BMI160.py  driver_vectornav.c
driver_development/shift_registers/: 74hc165pw.c  74hc165pw.h  74hc595pw.c  74hc595pw.h
driver_development/vectornav_IMU_GPS/: driver_vectornav.c  driver_vectornav.h
driver_development/vectornav_imu_gps/: README.md
engineering_technical_assessment/: CMakeLists.txt  README.md  build_project.sh
engineering_technical_assessment/documentation/: embedded_software_technical_assessment.docx
engineering_technical_assessment/include/: samv71j19b.h
engineering_technical_assessment/source_files/: app_main.cpp
engineering_technical_assessment/src/: ATSAMV71.cpp  ATSAMV71.h  GIT.code-workspace  app_main.cpp
other_example_code/Driver development/: README.txt  r2_driver_vectornav.h
other_example_code/algorithm_development/: README.md  README.txt  matrix_translation_rotation_prototype.py  patch_position_calculation.c  patch_position_calculations_test.cpp  (+2 more)
phased_array_chamber_test/: README.md  phased_array_sweep_automation.py
source_files/: ATSAMV71.cpp  ATSAMV71.h  app_main.cpp
technical-assessment/: CMakeLists.txt
vn310_driver_development/: driver_vectornav.c
(+17 files in other folders)
